sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:22: error: reassignment to val
      compteur=compteur+1
              ^